--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "flynsarmy/db-blade-compiler": "1.*",
         "simplesoftwareio/simple-qrcode": "1.1.*",
         "pingpong/menus": "1.0.*",
-        "creitive/breadcrumbs": "dev-master"
+        "creitive/breadcrumbs": "dev-master",
+        "mattbrown/laracurl": "dev-master"
 
 	},
 	"autoload": {
