--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "alexwhitman/view-themes": "1.2.*",
         "mj/breadcrumb": "dev-master",
         "knplabs/knp-snappy": "*",
-        "barryvdh/laravel-snappy": "dev-master",
+        "barryvdh/laravel-snappy": "0.1.*@dev"
         "flynsarmy/db-blade-compiler": "1.*",
         "simplesoftwareio/simple-qrcode": "1.1.*",
         "pingpong/menus": "1.0.*",
